--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 Flask==0.10.1
-requests==2.6.2
+itsdangerous==0.24
+Jinja2==2.10
+jsonschema==2.6.0
+MarkupSafe==1.0
+mmh3==2.3.1
 optimizely-sdk==1.3.0
+redis==2.10.6
+requests==2.6.2
+Werkzeug==0.14.1
